# xero-python

./: .gitlab-ci.yml  .travis.yml  README.md  pyproject.toml  setup.py  tox.ini
.openapi-generator/: FILES
docs/: APIException.md  Account.md  Account1.md  AccountType.md  AccountUsage.md  AccountUsageResponse.md  AccountingApi.md  Accounts.md  Accounts1.md  AccountsPayable.md  AccountsReceivable.md  Action.md  Actions.md  Address.md  Address1.md  AddressForOrganisation.md  Allocation.md  Allocations.md  AllowanceCategory.md  AllowanceType.md  Amount.md  AppStoreApi.md  Asset.md  AssetApi.md  AssetStatus.md  AssetStatusQueryParam.md  AssetType.md  Assets.md  Association.md  Attachment.md  Attachments.md  BalanceDetails.md  BalanceSheetAccountDetail.md  BalanceSheetAccountGroup.md  BalanceSheetAccountType.md  BalanceSheetResponse.md  Balances.md  BankAccount.md  BankFeedsApi.md  BankStatementAccountingResponse.md  (+368 more)
test/: test_account.py  test_account1.py  test_account_type.py  test_account_usage.py  test_account_usage_response.py  test_accounting_api.py  test_accounts.py  test_accounts1.py  test_accounts_payable.py  test_accounts_receivable.py  test_action.py  test_actions.py  test_address.py  test_address1.py  test_address_for_organisation.py  test_allocation.py  test_allocations.py  test_allowance_category.py  test_allowance_type.py  test_amount.py  test_api_exception.py  test_app_store_api.py  test_asset.py  test_asset_api.py  test_asset_status.py  test_asset_status_query_param.py  test_asset_type.py  test_assets.py  test_association.py  test_attachment.py  (+378 more)
(+992 files in other folders)
