[project]
name = "xero_python"
version = "1.0.0"
description = "Async Xero API client"
readme = "README.md"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
ignore = [
  # E501 and W191 can conflict with black formatting.
  "E501",
  "E402",
  "W191",
  "UP007", # Older versions of Pydantic don't like new syntax
  # UP040 warns about the deprecation of TypeAlias, as Python 3.12 introduced the
  # PEP 695 syntax for type aliases, but this is not yet supported by Pydantic.
  "UP040",
]
select = ["E", "F", "W", "I001", "DTZ", "UP", "INP"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = true

[tool.poetry]
name = "xero_python"
version = "1.0.0"
description = "merged spec"
authors = ["OpenAPI Generator Community <team@openapitools.org>"]
license = "NoLicense"
readme = "README.md"
repository = "https://github.com/GIT_USER_ID/GIT_REPO_ID"
keywords = ["OpenAPI", "OpenAPI-Generator", "merged spec"]
include = ["xero_python/py.typed"]

[tool.poetry.dependencies]
python = "^3.8"

urllib3 = ">= 1.25.3"
python-dateutil = ">=2.8.2"
aiohttp = ">= 3.8.4"
pydantic = "^1.10.5, <2"
aenum = ">=3.1.11"

[tool.poetry.dev-dependencies]
pytest = ">=7.2.1"
tox = ">=3.9.0"
flake8 = ">=4.0.0"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
